<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@drawable/rounded_edge"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/close" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/success_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/are_you_sure"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/success_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/question_mark"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/confirm_button"
        android:layout_gravity="center"
        android:text="@string/yes"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/projectOrange" />

</LinearLayout>