<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">

        <GridLayout
            android:columnCount="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_columnWeight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/leaderboard"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:background="@drawable/btn_rounded"
                android:textAllCaps="false"
                android:text="@string/submit" />

        </GridLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimaryDark"
            app:tabTextAppearance="@style/TabLayoutTextStyle"
            app:tabSelectedTextColor="@color/colorAccent"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorHeight="@dimen/tab_indicator_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>